--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <hr />
 
     <p>
-      <a href="https://github.com/your-username">Return to my GitHub profile</a>
+      <a href="https://github.com/cyanlit">Return to my GitHub profile</a>
     </p>
   </main>
 </body>
